tests/transpiler/x/fs/len_map.fs
// Generated 2025-07-21 18:37 +0700

type Anon1 = {
    mutable a: int
    mutable b: int
}
printfn "%d" (Seq.length { a = 1; b = 2 })
